# nfp_gen

./: CMakeLists.txt  nfp-gen.code-workspace
configs/: pieces_plg.json
src/: main.cpp
src/data_loader/: data_loader.cpp  data_loader.hpp
src/types/: types.hpp
src/utils/: utils.cpp  utils.hpp
